把NIDAQ添加到这里面了，并且NIDAQHub在顶层TPM中

--- a/TPM.vcxproj.filters
+++ b/TPM.vcxproj.filters
@@ -23,5 +23,11 @@
     <ClCompile Include="TPM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NIAnalogOutputPort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NIDigitalOutputPort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
