--- a/TPM.vcxproj
+++ b/TPM.vcxproj
@@ -78,14 +78,14 @@
     <ClCompile>
       <PreprocessorDefinitions>_DEBUG;TPM_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>D:\GitHub\micro-manager\micro-manager\mmCoreAndDevices\DeviceAdapters\TPM\logclass;D:\GitHub\micro-manager\micro-manager\mmCoreAndDevices\DeviceAdapters\TPM\3rd\include;D:\GitHub\micro-manager\micro-manager\mmCoreAndDevices\DeviceAdapters\TPM\fifo_multi;$(MM_3RDPARTYPRIVATE)\NationalInstruments\DAQmx_9.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\TPM\logclass;..\TPM\3rd\include;..\TPM\fifo_multi;$(MM_3RDPARTYPRIVATE)\NationalInstruments\DAQmx_9.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <SDLCheck>false</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>true</EnableUAC>
-      <AdditionalLibraryDirectories>D:\GitHub\micro-manager\micro-manager\mmCoreAndDevices\DeviceAdapters\TPM\3rd\lib\x64;$(MM_3RDPARTYPRIVATE)\NationalInstruments\DAQmx_9.2\lib64\msvc;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\TPM\3rd\lib\x64;$(MM_3RDPARTYPRIVATE)\NationalInstruments\DAQmx_9.2\lib64\msvc;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>nidaqmx.lib;QTXdmaApi.lib;pthreadVC2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
